@@ -303,6 +303,7 @@ Ralph Schmieder
 David Schmitt
 Mark Schneider
 Evan Schoenberg
+Gabriel Schulof
 Federico Schwindt
 Torrey Searle
 Peter Seebach
@@ -359,6 +360,7 @@ Kristof Vansant
 James Vega
 David Vermeille
 Sid Vicious
+Jorge Villaseñor (Masca)
 Bjoern Voigt
 Wan Hing Wah
 Philip Walford
