@@ -35,6 +35,10 @@ version 2.0.1 (??/??/????):
 	* Improved tab completion support
 	* Ctrl+c prompts with a dialog before exiting
 	* Filter string in the debug window
+	* Notify when you leave a chat
+	* Work around an ncurses bug which appears when half of a multi-cell
+	  character is covered by an upper-level window
+	* New plugins are shown in bold text in the plugin dialog
 
 version 2.0.0 (5/3/2007):
 	* The project has new names - libpurple for the core, Pidgin for the
